remove intuit SVG and update spacing issues

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -74,12 +74,12 @@
     align-content: center;
     transition-duration: 0.3s;
 
-    height: 150px;
+    height: 120px;
     width: 100%;
     overflow: hidden;
 
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     @media (max-width: 992px) {
       height: auto;
     }
@@ -96,12 +96,12 @@
     transform: scale(1.05);
   }
 
-  .intuitLogo {
+  .intuit-logo {
     height: 200px;
     position: relative;
     top: -50px;
     @media (max-width: 992px) {
-      height: auto;
+      height: 130px;
       top: 0;
     }
   }
@@ -111,14 +111,20 @@
     width: auto;
     @media (max-width: 992px) {
       height: auto;
-      width: 100%;
+      width: 80%;
     }
+  }
+
+  .sponsor-image-wide {
+    height: auto;
+    width: 100%;
   }
 
   .sponsor-square-image {
     height: 200px;
     @media (max-width: 992px) {
       height: auto;
+      width: 80%;
     }
   }
 }
